--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
     <main>
         <section class="profile-section">
             <div class="profile-header">
-                <img src="user-avatar.png" alt="User Avatar" class="profile-avatar">
+                <img src="user-avatar.jpg" alt="User Avatar" class="profile-avatar">
                 <h1>홍길동</h1>
                 <p>email@example.com</p>
             </div>
